Use multiple files for training and save model checkpoints while training

--- a/config.cfg
+++ b/config.cfg
@@ -3,9 +3,12 @@
 thisfolder = /data/user/tglauch/ML_Reco/
 
 [Training_Parameters]
-epochs = 50
-batch_size = 2000
-verbose = 0
+epochs = 25
+batch_size = 4000
 training_fraction = 5
 validation_fraction = 5
 test_fraction = 1
+patience = 2
+verbose = 2
+delta = 0
+max_queue_size = 2
