Changed File Paths and plotting of IceCube MuEx

--- a/config.cfg
+++ b/config.cfg
@@ -3,12 +3,13 @@
 thisfolder = /data/user/tglauch/ML_Reco/
 
 [Training_Parameters]
-epochs = 25
-batch_size = 4000
+epochs = 30
+batch_size = 2000
 training_fraction = 5
 validation_fraction = 5
 test_fraction = 1
-patience = 2
+patience = 5
 verbose = 2
 delta = 0
 max_queue_size = 2
+learning_rate = 0.0015
