empty space bug in neural_network.py and new network config

--- a/config.cfg
+++ b/config.cfg
@@ -12,4 +12,14 @@ patience = 6
 verbose = 2
 delta = 0
 max_queue_size = 4
-learning_rate = 0.002
+learning_rate = 0.001
+
+[GPU]
+
+request_gpus = 1
+request_memory = 8
+requirements = TARGET.CUDACapability 
+
+
+
+
