--- a/simple_CNN.cfg
+++ b/simple_CNN.cfg
@@ -5,12 +5,15 @@
 		padding = same	
 		kernel_initializer = he_normal
 		input_shape = (1,21,21,51)
+                strides=3
 
-[Dropout]
-	rate = 0.4
+[BatchNormalization]
 
 [Activation]
 	activation = relu
+
+[Dropout]
+	rate = 0.4
 
 [Convolution3D]
 	filters = 64
@@ -19,8 +22,28 @@
 		padding = same	
 		kernel_initializer = he_normal
 
+[BatchNormalization]
+
 [Activation]
 	activation = relu
+
+[Dropout]
+	rate = 0.4
+
+[Convolution3D]
+	filters = 128
+	kernel_size = (5,5,5)
+		[kwargs]
+		padding = same	
+		kernel_initializer = he_normal
+
+[BatchNormalization]
+
+[Activation]
+	activation = relu
+
+[Dropout]
+	rate = 0.4
 
 [Flatten]
 
@@ -28,7 +51,7 @@
 	rate = 0.4
 
 [Dense]
-	units = 128
+	units = 256
 	[kwargs]
 	kernel_initializer = normal
 	activation = relu
