--- a/johannes/updownclassification_2/config.cfg
+++ b/johannes/updownclassification_2/config.cfg
@@ -6,11 +6,16 @@ data_enc_folder = /data/user/jkager/NN_Reco/
 [Training_Parameters]
 epochs = 30
 batch_size = 5000
-training_fraction = 5
-validation_fraction = 5
+training_fraction = 6
+validation_fraction = 4
 test_fraction = 1
 patience = 6
 verbose = 2
 delta = 0
 max_queue_size = 4
 learning_rate = 0.0015
+
+[GPU]
+request_gpus = 1
+request_memory = 8
+requirements = TARGET.CUDACapability
