Multi GPU extension

--- a/config.cfg
+++ b/config.cfg
@@ -1,12 +1,14 @@
-
 [Basics]
-thisfolder = /data/user/tglauch/ML_Reco/
+thisfolder = /scratch9/tglauch/NN_Reco
+keras_backend = tensorflow
+workload_manager = slurm
+cuda_installation = /usr/local/cuda/
 
 [Training_Parameters]
 epochs = 60
-batch_size = 1000
-training_fraction = 6
-validation_fraction = 4
+single_gpu_batch_size = 1250
+training_fraction = 5
+validation_fraction = 5
 test_fraction = 1
 patience = 6
 verbose = 2
@@ -15,9 +17,8 @@ max_queue_size = 4
 learning_rate = 0.001
 
 [GPU]
-
-request_gpus = 1
-request_memory = 8
+request_gpus = 4
+request_memory = 12
 requirements = TARGET.CUDACapability 
 
 
