--- a/Networks/DNN.cfg
+++ b/Networks/DNN.cfg
@@ -1,37 +1,11 @@
 [Convolution3D]
-	filters = 64
+	filters = 32
 	kernel_size = (3,3,3)
 		[kwargs]
 		kernel_initializer = he_normal
-		input_shape = (1,21,21,51)
+		input_shape = (20,10,60,1)
 		padding = same
-		strides = 1
-
-[BatchNormalization]
-
-[Activation]
-	activation = relu
-
-[Convolution3D]
-	filters = 128
-	kernel_size = (3,3,3)
-		[kwargs]
-		kernel_initializer = he_normal
-		padding = same
-		strides = 1
-
-[BatchNormalization]
-
-[Activation]
-	activation = relu
-
-[Convolution3D]
-	filters = 64
-	kernel_size = (3,3,3)
-		[kwargs]
-		kernel_initializer = he_normal
-		padding = same
-		strides = 1
+		strides = 2
 
 [BatchNormalization]
 
@@ -40,13 +14,45 @@
 
 [MaxPooling3D]
 	[kwargs]
-	pool_size = (2,2,2)
+	pool_size = (3,3,3)
 	padding = 'same'
+
+[Convolution3D]
+	filters = 64
+	kernel_size = (3,3,3)
+		[kwargs]
+		kernel_initializer = he_normal
+		padding = same
+		strides = 1
+
+[BatchNormalization]
+
+[Activation]
+	activation = relu
+
+[Dropout]
+	rate = 0.4
+
+[Convolution3D]
+	filters = 32
+	kernel_size = (3,3,3)
+		[kwargs]
+		kernel_initializer = he_normal
+		padding = same
+		strides = 1
+
+[BatchNormalization]
+
+[Activation]
+	activation = relu
+
+[Dropout]
+	rate = 0.4
 
 [Flatten]
 
 [Dropout]
-	rate = 0.5
+	rate = 0.4
 
 [Dense]
 	units = 512
@@ -55,7 +61,7 @@
 	activation = relu
 
 [Dropout]
-	rate = 0.5
+	rate = 0.4
 
 [Dense]
 	units = 128
