--- a/Networks/DNN_withPooling.cfg
+++ b/Networks/DNN_withPooling.cfg
@@ -1,11 +1,11 @@
 [Convolution3D]
 	filters = 64
-	kernel_size = (3,3,3)
+	kernel_size = (4,2,6)
 		[kwargs]
 		kernel_initializer = he_normal
 		input_shape = (20,10,60,1)
 		padding = same
-		strides = 2
+		strides = 1
 
 [BatchNormalization]
 
@@ -14,7 +14,7 @@
 
 [MaxPooling3D]
 	[kwargs]
-	pool_size=(2, 2, 2)
+	pool_size=(1, 1, 3)
 	padding='same'
 
 [Convolution3D]
@@ -30,8 +30,10 @@
 [Activation]
 	activation = relu
 
-[Dropout]
-	rate = 0.4
+[MaxPooling3D]
+	[kwargs]
+	pool_size=(2, 2, 2)
+	padding='same'
 
 [Flatten]
 
