last backup before changing datapaths

--- a/johannes/updownclassification_2/FCNN_v1_linout.cfg
+++ b/johannes/updownclassification_2/FCNN_v1_linout.cfg
@@ -1,5 +1,5 @@
 [Dense]
-	units = 3600
+	units = 1824
 		[kwargs]
 		input_dim = 22491
         kernel_initializer = uniform
@@ -7,19 +7,18 @@
         #kernel_constraint = maxnorm(3)
 
 [Dropout]
-	rate = 0.3
+	rate = 0.4
 
 [Dense]
-	units = 1200
+	units = 612
 		[kwargs]
         kernel_initializer = uniform
         activation = softplus
         #kernel_constraint = maxnorm(3)
 
 [Dropout]
-	rate = 0.3
+	rate = 0.4
 
 [Dense]
 	units = 1
-	activation = softmax
-    
+	activation = linear
