--- a/Networks/DNN_withPooling.cfg
+++ b/Networks/DNN_withPooling.cfg
@@ -1,56 +1,48 @@
 [Convolution3D]
-	filters = 64
-	kernel_size = (4,2,6)
+	filters = 32
+	kernel_size = (5,5,10)
 		[kwargs]
 		kernel_initializer = he_normal
 		input_shape = (20,10,60,1)
 		padding = same
-		strides = 1
+		strides = (2,2,6)
 
 [BatchNormalization]
 
 [Activation]
 	activation = relu
 
-[MaxPooling3D]
-	[kwargs]
-	pool_size=(1, 1, 3)
-	padding='same'
+[Dropout]
+	rate = 0.4
 
 [Convolution3D]
 	filters = 64
-	kernel_size = (3,3,3)
+	kernel_size = (2,2,2)
 		[kwargs]
 		kernel_initializer = he_normal
 		padding = same
-		strides = 1
 
 [BatchNormalization]
 
 [Activation]
 	activation = relu
 
-[MaxPooling3D]
-	[kwargs]
-	pool_size=(2, 2, 2)
-	padding='same'
+[Dropout]
+	rate = 0.4
 
 [Flatten]
 
+[Dropout]
+	rate = 0.4
+
 [Dense]
-	units = 512
+	units = 1024
 	[kwargs]
 	kernel_initializer = normal
 	activation = relu
 
 [Dropout]
 	rate = 0.4
-
-[Dense]
-	units = 128
-	[kwargs]
-	kernel_initializer = normal
-	activation = relu
 
 [Dense]
 	units = 1
