--- a/config.cfg
+++ b/config.cfg
@@ -2,23 +2,23 @@
 thisfolder = /scratch9/tglauch/NN_Reco
 keras_backend = tensorflow
 workload_manager = slurm
-cuda_installation = /usr/local/cuda/
+cuda_installation = /usr/local/cuda/lib64
 
 [Training_Parameters]
 epochs = 60
-single_gpu_batch_size = 2000
-training_fraction = 5
-validation_fraction = 5
+single_gpu_batch_size = 100
+training_fraction = 7.5
+validation_fraction = 2.5
 test_fraction = 1
-patience = 6
-verbose = 2
+patience = 10
+verbose = 1
 delta = 0
 max_queue_size = 4
 learning_rate = 0.001
 
 [GPU]
 request_gpus = 4
-request_memory = 8
+request_memory = 5
 requirements = TARGET.CUDACapability 
 
 
