move functions to new file

--- a/Networks/test.cfg
+++ b/Networks/test.cfg
@@ -59,6 +59,12 @@ activation = relu
 layers = [Branch1, Branch2]
 
 [Dense]
+units = 4096
+[kwargs]
+kernel_initializer = normal
+activation = relu
+
+[Dense]
 units = 1
 [kwargs]
 kernel_initializer = normal
