Everything ready for multi variable input except ot the generator ....

--- a/Networks/test.cfg
+++ b/Networks/test.cfg
@@ -1,8 +1,17 @@
 *Settings*
 
-[Inputs]
-Branch1 = (x-np.mean(x))/np.std(x)
-Branch2 = np.sum(x)
+{Inputs}
+
+[Branch1]
+variables = charge,time
+transformations = (x-np.mean(x))/np.std(x), x
+
+[Branch2]
+variables = charge
+transformations = np.sum(x)
+
+{Outputs}
+variables = np.log10(energy)
 
 *Model*
 
@@ -44,6 +53,9 @@ padding='same'
 
 [Flatten]
 
+[Dropout]
+rate = 0.5
+
 {Branch2}
 
 [Dense]
@@ -59,10 +71,22 @@ activation = relu
 layers = [Branch1, Branch2]
 
 [Dense]
-units = 4096
+units = 1024
 [kwargs]
 kernel_initializer = normal
 activation = relu
+
+[Dropout]
+rate = 0.4
+
+[Dense]
+units = 32
+[kwargs]
+kernel_initializer = normal
+activation = relu
+
+[Dropout]
+rate = 0.4
 
 [Dense]
 units = 1
