--- a/create_dataset.cfg
+++ b/create_dataset.cfg
@@ -1,7 +1,8 @@
 [Basics]
-MC_path = '/data/ana/PointSource/PS/IC86_2012/files/sim/2012/neutrino-generator/'
-geometry_file = '/data/sim/sim-new/downloads/GCD/GeoCalibDetectorStatus_2012.56063_V0.i3.gz'
-input_shape = '[20,10,60]'
+MC_path = /data/ana/PointSource/PS/IC86_2012/files/sim/2012/neutrino-generator/
+geometry_file = /data/sim/sim-new/downloads/GCD/GeoCalibDetectorStatus_2012.56063_V0.i3.gz
+input_shape = [20,10,60]
+out_folder = test
 
 ### Define Input Variables Below
 [azimuth]
