Fixing file path bugs

--- a/Networks/test.cfg
+++ b/Networks/test.cfg
@@ -11,7 +11,8 @@ variables = charge
 transformations = np.sum(x)
 
 {Outputs}
-variables = np.log10(energy)
+variables = energy
+transformations = np.log10(x)
 
 *Model*
 
