make mc path variable

--- a/Networks/test.cfg
+++ b/Networks/test.cfg
@@ -4,15 +4,16 @@
 
 [Branch1]
 variables = charge,time
-transformations = (x-np.mean(x))/np.std(x), x
+transformations = (x-np.mean(x))/np.std(x),x
 
 [Branch2]
 variables = charge
 transformations = np.sum(x)
 
 {Outputs}
-variables = energy
-transformations = np.log10(x)
+
+variables = energy,azimuth
+transformations = np.log10(x),x
 
 *Model*
 
@@ -90,7 +91,7 @@ activation = relu
 rate = 0.4
 
 [Dense]
-units = 1
+units = 2
 [kwargs]
 kernel_initializer = normal
 activation = linear
