--- a/default.cfg
+++ b/default.cfg
@@ -1,6 +1,8 @@
+#### This is the defaul configuration. Adjust the settings to your system and move to config.cfg
+
 [Basics]
 ###folder of the python files
-thisfolder = /scratch9/tglauch/NN_Reco 
+thisfolder = /scratch9/<your-user-name>/NN_Reco 
 ###choose tensorflow or theano
 keras_backend = tensorflow       
 ### choose between slurm and condor
