test again with correct user.name

--- a/config_jstettner.cfg
+++ b/config_jstettner.cfg
@@ -1,4 +1,4 @@
-#### This is the defaul configuration. Adjust the settings to your system and move to config.cfg
+#### This is the personal testing config by jstettner 
 
 [Basics]
 ###folder of the python files
