--- a/config_jstettner.cfg
+++ b/config_jstettner.cfg
@@ -2,6 +2,7 @@
 
 [Basics]
 ###folder of the python files
+## edit here for madison files
 thisfolder = /scratch9/<your-user-name>/NN_Reco 
 ###choose tensorflow or theano
 keras_backend = tensorflow       
