--- a/default.cfg
+++ b/default.cfg
@@ -2,7 +2,7 @@
 
 [Basics]
 ###folder of the python files
-thisfolder = /scratch9/<your-user-name>/NN_Reco 
+thisfolder = /scratch9/tglauch/NN_Reco 
 ###choose tensorflow or theano
 keras_backend = tensorflow       
 ### choose between slurm and condor
