change example networks

--- a/Networks/test.cfg
+++ b/Networks/test.cfg
@@ -12,8 +12,8 @@ transformations = np.sum(x)
 
 {Outputs}
 
-variables = energy,azimuth
-transformations = np.log10(x),x
+variables = azimuth
+transformations = x
 
 *Model*
 
@@ -51,7 +51,6 @@ activation = relu
 [MaxPooling3D]
 [kwargs]
 pool_size=(2, 2, 2)
-padding='same'
 
 [Flatten]
 
@@ -91,7 +90,7 @@ activation = relu
 rate = 0.4
 
 [Dense]
-units = 2
+units = 1
 [kwargs]
 kernel_initializer = normal
 activation = linear
