--- a/Networks/test2.cfg
+++ b/Networks/test2.cfg
@@ -9,19 +9,19 @@ transformations = x
 {Outputs}
 
 variables = energy
-transformations = x
+transformations = np.log10(x)
 
 *Model*
 
 {Branch1}
 
 [Convolution3D]
-filters = 64
-kernel_size = (4,2,6)
+filters = 8
+kernel_size = (2,2,2)
 [kwargs]
 kernel_initializer = he_normal
 padding = same
-strides = (2,1,6)
+strides = (3,3,3)
 
 [BatchNormalization]
 
@@ -32,7 +32,7 @@ activation = relu
 rate = 0.4
 
 [Convolution3D]
-filters = 32
+filters = 8
 kernel_size = (3,3,3)
 [kwargs]
 kernel_initializer = he_normal
@@ -47,30 +47,14 @@ activation = relu
 [MaxPooling3D]
 [kwargs]
 pool_size=(2, 2, 2)
-padding='same'
 
 [Flatten]
 
-[Dropout]
-rate = 0.5
-
 [Dense]
-units = 512
+units = 8
 [kwargs]
 kernel_initializer = normal
 activation = relu
-
-[Dropout]
-rate = 0.4
-
-[Dense]
-units = 32
-[kwargs]
-kernel_initializer = normal
-activation = relu
-
-[Dropout]
-rate = 0.4
 
 [Dense]
 units = 1
