adjust path settings

--- a/Networks/test.cfg
+++ b/Networks/test.cfg
@@ -12,15 +12,15 @@ transformations = np.sum(x)
 
 {Outputs}
 
-variables = azimuth
-transformations = x
+variables = depositedE
+transformations = np.log10(x)
 
 *Model*
 
 {Branch1}
 
 [Convolution3D]
-filters = 64
+filters = 32
 kernel_size = (4,2,6)
 [kwargs]
 kernel_initializer = he_normal
@@ -36,7 +36,7 @@ activation = relu
 rate = 0.4
 
 [Convolution3D]
-filters = 32
+filters = 64
 kernel_size = (3,3,3)
 [kwargs]
 kernel_initializer = he_normal
