--- a/johannes/updownclassification_3/CNN_v1.cfg
+++ b/johannes/updownclassification_3/CNN_v1.cfg
@@ -1,28 +1,28 @@
 [Convolution3D]
 	filters = 64
-	kernel_size = (5,5,5)
+	kernel_size = (3,3,5)
 		[kwargs]
 		kernel_initializer = he_normal
 		input_shape = (20,10,60,1)
-		padding = same
-		strides = 1
+		padding = valid
+		strides = 2
 
 [BatchNormalization]
 
 [Activation]
 	activation = relu
-
+#
 #[Dropout]
 #	rate = 0.4
 #
 #[MaxPooling3D]
 #	[kwargs]
 #	pool_size = (2,2,2)
-#	padding = 'same'
-#
+#	padding = same
+
 [Convolution3D]
 	filters = 64
-	kernel_size = (5,5,5)
+	kernel_size = (3,3,3)
 		[kwargs]
 		kernel_initializer = he_normal
 		padding = same
@@ -32,7 +32,7 @@
 
 [Activation]
 	activation = relu
-
+#
 #[Dropout]
 #	rate = 0.4
 #
@@ -40,19 +40,6 @@
 #	[kwargs]
 #	pool_size = (2,2,2)
 #	padding = 'same'
-#
-[Convolution3D]
-	filters = 128
-	kernel_size = (5,5,5)
-		[kwargs]
-		kernel_initializer = he_normal
-		padding = same
-		strides = 2
-
-[BatchNormalization]
-
-[Activation]
-	activation = relu
 
 [Flatten]
 
@@ -61,9 +48,9 @@
 
 [Dense]
 	units = 512
-	[kwargs]
-	kernel_initializer = normal
-	activation = relu
+		[kwargs]
+		kernel_initializer = normal
+		activation = relu
 
 [Dropout]
 	rate = 0.4
