--- a/configs/config_jstettner.cfg
+++ b/configs/config_jstettner.cfg
@@ -1,23 +1,25 @@
-#### This is the defaul configuration. Adjust the settings to your system and move to config.cfg
+#### This is the personal testing config by jstettner 
 
 [Basics]
 ###folder of the python files
-thisfolder = /scratch9/<your-user-name>/NN_Reco 
+thisfolder = /data/user/jstettner/DeepIce/NN_Reco 
 ###choose tensorflow or theano
-keras_backend = tensorflow       
+keras_backend = theano
 ### choose between slurm and condor
-workload_manager = slurm	       
+workload_manager = condor	       
 ### path to the cuda installation
-cuda_installation = /usr/local/cuda/lib64
+cuda_installation = /usr/local/cuda/bin
 ##path to monte carlo datasets
-mc_path = /scratch9/tglauch/NN_Reco/training_data/
-#
-train_folder = /data/user/tglauch/NN_Reco/trainData/
+mc_path = /data/user/tglauch/ML_Reco/training_data/
+  
+train_folder = /data/user/jstettner/DeepIce/trainData/
 
 [Training_Parameters]
-epochs = 60
+epochs = 1
+#60
 ### the total batch size is the single_gpu_batch_size*reques_gpus
 single_gpu_batch_size = 200
+#200
 #### relative fractions of the training, validation, test dataset
 training_fraction = 7.5     
 validation_fraction = 2.5
@@ -29,10 +31,10 @@ max_queue_size = 2
 learning_rate = 0.001
 
 [GPU]
-request_gpus = 4
+request_gpus = 1
 request_memory = 7
 requirements = TARGET.CUDACapability 
-exclude_node = bigbird
+#exclude_node = bigbird
 
 
 
