--- a/configs/create_dataset_minimal.cfg
+++ b/configs/create_dataset_minimal.cfg
@@ -2,7 +2,11 @@
 MC_path = /data/ana/PointSource/PS/IC86_2012/files/sim/2012/neutrino-generator/
 geometry_file = /data/sim/sim-new/downloads/GCD/GeoCalibDetectorStatus_2012.56063_V0.i3.gz
 input_shape = [20,10,60]
-out_folder = test
+out_folder = /data/user/jstettner/DeepIce/trainData/Datasets
+dagman_folder = /data/user/jstettner/DeepIce/trainData/Dagmans
+file_list = 11029/00000-00999.h5:11029/01000-01999.h5
+#:11029_02000-02999.h5:11029_03000-03999.h5:11029_04000-04999.h5:11029_05000-05999.h5
+### careful! This is in arbitrary list of files for testing (part of lowE)
 
 ### Define Input Variables Below
 [azimuth]
