--- a/configs/config_MadisonExample.cfg
+++ b/configs/config_MadisonExample.cfg
@@ -1,4 +1,5 @@
-#### This is the personal testing config by jstettner 
+#### This is an example config file for the environment in Madison:
+## all file-options were modified such that they expect absolute paths, e.g. when calling trainNN.py use --main_config /data/user/..../configs/thisFile.cfg
 
 [Basics]
 ###folder of the python files
@@ -10,7 +11,7 @@ workload_manager = condor
 ### path to the cuda installation
 cuda_installation = /usr/local/cuda/bin
 ##path to monte carlo datasets
-mc_path = /data/user/tglauch/ML_Reco/training_data/  
+mc_path = /data/user/tglauch/ML_Reco/training_data/
 train_folder = /data/user/jstettner/DeepIce/trainData/
 
 [Training_Parameters]
