--- a/configs/create_dataset_Diffuse.cfg
+++ b/configs/create_dataset_Diffuse.cfg
@@ -7,34 +7,36 @@ out_folder = /data/user/jstettner/DeepIce/trainData/Datasets/
 dagman_folder = /data/user/jstettner/DeepIce/trainData/Dagmans
 folder = 3333/
 ## file_list: either 0888-0890 (from-to) or 0111:3242:0344:3842 (single files) or allinfolder
-file_list = allinfolder
+file_list = 000000-000600
+#allinfolder
 #000000-000500
 #001800:001799:001810:001600:001111:000792:000788
 PulseSeriesMap = SRTOfflinePulses
 
 ### Define Input Variables Below
+## here for MuonGun files to get things running:
 [azimuth]
-variable = ['MCMostEnergeticTrack'].dir.azimuth
+variable = ['MCPrimary1'].dir.azimuth
 out_type = float64
 
 [zenith]
-variable = ['MCMostEnergeticTrack'].dir.zenith
+variable = ['MCPrimary1'].dir.zenith
 out_type = float64
 
 [muex]
 variable = ['SplineMPEMuEXDifferential'].energy
 out_type = float64
 
-[ow]
-variable = ['I3MCWeightDict']['OneWeight']
-out_type = float64
+#[ow]
+#variable = ['I3MCWeightDict']['OneWeight']
+#out_type = float64
 
 [depositedE]
 function = calc_depositedE(x)
 out_type = float64
 
 [energy]
-variable = ['MCMostEnergeticTrack'].energy
+variable = ['MCPrimary1'].energy
 out_type = float64
-min = 100
+min = 1e2
 max = 1e9
