added four variables (angles of linefit and SplineMPE)

--- a/configs/create_dataset_MadisonExample.cfg
+++ b/configs/create_dataset_MadisonExample.cfg
@@ -33,3 +33,19 @@ variable = ['MCMostEnergeticTrack'].energy
 out_type = float64
 min = 100
 max = 1e9
+
+[azimuth_linefit]
+variable = ['LineFit_HV'].dir.azimuth
+out_type = float64
+
+[zenith_linefit]
+variable = ['LineFit_HV'].dir.zenith
+out_type = float64
+
+[azimuth_splinempe]
+variable = ['SplineMPE'].dir.azimuth
+out_type = float64
+
+[zenith_splinempe]
+variable = ['SplineMPE'].dir.zenith
+out_type = float64
