first tries with more complex models for the diffuse dataset (HexGrid)

--- a/configs/create_dataset_DiffuseHex.cfg
+++ b/configs/create_dataset_DiffuseHex.cfg
@@ -8,8 +8,7 @@ out_folder = /data/user/jstettner/DeepIce/trainData/Datasets/
 dagman_folder = /data/user/jstettner/DeepIce/trainData/Dagmans
 folder = 3333/
 ## file_list: either 0888-0890 (from-to) or 0111:3242:0344:3842 (single files) or allinfolder
-file_list = 000000-000600
-#allinfolder
+file_list = allinfolder
 #000000-000500
 #001800:001799:001810:001600:001111:000792:000788
 PulseSeriesMap = SRTOfflinePulses
