add new default configs

--- a/configs/create_dataset_default.cfg
+++ b/configs/create_dataset_default.cfg
@@ -1,11 +1,15 @@
 [Basics]
-MC_path = /data/ana/PointSource/PS/IC86_2012/files/sim/2012/neutrino-generator/
+MC_path = <path to folder containing mc files>
 geometry_file = /data/sim/sim-new/downloads/GCD/GeoCalibDetectorStatus_2012.56063_V0.i3.gz
-input_shape = [20,10,60]
-out_folder = /data/user/jstettner/DeepIce/trainData/Datasets
-dagman_folder = /data/user/jstettner/DeepIce/trainData/Dagmans
-file_list = 11029/00000-00999.h5:11029/01000-01999.h5
-### careful! This is in arbitrary list of files for testing (part of lowE)
+out_folder = <folder for the output>
+dagman_folder = <folder for the dagman files and logs>
+input_shape = auto
+PulseSeriesMap = InIceDSTPulses
+## give a comma seperated list of foldes in MC_path to be processed, if 'allinmcpath' use all folders
+folder_list = allinmcpath  
+## give a comma seperated list of files to search for in subfolders of MC_path. If 'allinfolder' use all files.
+### use standart unix syntax for using files matching a special regular expression, e.g. *numu*
+file_list = allinfolder
 
 ### Define Input Variables Below
 [azimuth]
