Array output working now. + Removed all 'eval' statements from the generator

--- a/configs/config_jstettnerRZ_cat.cfg
+++ b/configs/config_jstettnerRZ_cat.cfg
@@ -20,10 +20,11 @@ train_folder = /home/js343370/DeepIce/trainData
 #/data/user/jstettner/DeepIce/trainData/
 
 [Training_Parameters]
-epochs = 5
+epochs = 12
+#5
 #60
 ### the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 330
+single_gpu_batch_size = 400
 #200
 #### relative fractions of the training, validation, test dataset
 training_fraction = 7.5     
@@ -34,7 +35,8 @@ verbose = 1
 delta = 0
 max_queue_size = 2
 learning_rate = 0.01
-loss_function=mean_squared_error
+#loss_function=mean_squared_error
+loss_function=categorical_crossentropy
 
 [GPU]
 request_gpus = 2
