minor changes, just training in parallel

--- a/configs/config_jstettnerRZ.cfg
+++ b/configs/config_jstettnerRZ.cfg
@@ -20,10 +20,10 @@ train_folder = /home/js343370/DeepIce/trainData
 #/data/user/jstettner/DeepIce/trainData/
 
 [Training_Parameters]
-epochs = 10
+epochs = 14
 #60
 ### the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 500
+single_gpu_batch_size = 460
 #200
 #### relative fractions of the training, validation, test dataset
 training_fraction = 7.5     
@@ -33,7 +33,7 @@ patience = 20
 verbose = 1
 delta = 0
 max_queue_size = 2
-learning_rate = 0.00004
+learning_rate = 4e-7
 loss_function=mean_squared_error
 
 [GPU]
