--- a/configs/create_dataset_multipleSim.cfg
+++ b/configs/create_dataset_multipleSim.cfg
@@ -1,4 +1,5 @@
 [Basics]
+multipleSim = True
 MC_path0 = <path to folder containing mc files>
 MC_path1 = <path to folder containing mc files>
 MC_path2 = <path to folder containing mc files>
