--- a/configs/create_dataset_multipleSim.cfg
+++ b/configs/create_dataset_multipleSim.cfg
@@ -5,6 +5,7 @@ MC_path1 = <path to folder containing mc files>
 MC_path2 = <path to folder containing mc files>
 geometry_file = /data/sim/sim-new/downloads/GCD/GeoCalibDetectorStatus_2012.56063_V0.i3.gz
 out_folder = <folder for the output>
+output_file = <name of the output file>
 dagman_folder = <folder for the dagman files and logs>
 input_shape = auto
 PulseSeriesMap = InIceDSTPulses
