--- a/configs/create_dataset_multipleSim.cfg
+++ b/configs/create_dataset_multipleSim.cfg
@@ -57,3 +57,7 @@ out_type = float64
 [zenith_splinempe]
 variable = ['SplineMPE'].dir.zenith
 out_type = float64
+
+[event_typ]
+variable = []
+out_type = string 
