--- a/configs/create_dataset_multipleSim_mk.cfg
+++ b/configs/create_dataset_multipleSim_mk.cfg
@@ -1,12 +1,14 @@
 [Basics]
-multipleSim = True
-MC_path0 = <path to folder containing mc files>
-MC_path1 = <path to folder containing mc files> 
-MC_path2 = <path to folder containing mc files>
+# number of files to shuffle 
+amountoffiles = 2
+# number of MC-paths given, need to match the number of files to be shuffled
+MC_path0 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11477/00000-00999/clsim-base-4.0.3.0.99_eff/
+MC_path1 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11981/00000-00999/clsim-base-4.0.3.0.99_eff/
+MC_path2 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11374/00000-00999/clsim-base-4.0.3.0.99_eff/
 geometry_file = /data/sim/sim-new/downloads/GCD/GeoCalibDetectorStatus_2012.56063_V0.i3.gz
-out_folder = <folder for the output>
-output_file = <name of the output file>
-dagman_folder = <folder for the dagman files and logs>
+out_folder = /data/user/mkronmueller/data/run01
+output_file = neutrinos_of_3_types_001
+dagman_folder = /data/user/mkronmueller/data/run01/dagman
 input_shape = auto
 PulseSeriesMap = InIceDSTPulses
 ## give a comma seperated list of foldes in MC_path to be processed, if 'allinmcpath' use all folders
@@ -16,16 +18,16 @@ folder_list = allinmcpath
 file_list = allinfolder
 
 ### Define Input Variables Below
+[event_typ]
+variable = []
+out_type = float64
+
 [azimuth]
 variable = ['MCMostEnergeticTrack'].dir.azimuth
 out_type = float64
 
 [zenith]
 variable = ['MCMostEnergeticTrack'].dir.zenith
-out_type = float64
-
-[muex]
-variable = ['SplineMPEMuEXDifferential'].energy
 out_type = float64
 
 [ow]
@@ -41,23 +43,3 @@ variable = ['MCMostEnergeticTrack'].energy
 out_type = float64
 min = 100
 max = 1e9
-
-[azimuth_linefit]
-variable = ['LineFit_HV'].dir.azimuth
-out_type = float64
-
-[zenith_linefit]
-variable = ['LineFit_HV'].dir.zenith
-out_type = float64
-
-[azimuth_splinempe]
-variable = ['SplineMPE'].dir.azimuth
-out_type = float64
-
-[zenith_splinempe]
-variable = ['SplineMPE'].dir.zenith
-out_type = float64
-
-[event_typ]
-variable = []
-out_type = string 
