update multiple files

--- a/configs/create_dataset_multipleSim_mk.cfg
+++ b/configs/create_dataset_multipleSim_mk.cfg
@@ -1,7 +1,10 @@
 [Basics]
 # number of files to shuffle 
-amountoffiles = 2
-# number of MC-paths given, need to match the number of files to be shuffled
+amountoffiles = 3
+LengthFilelist = 5
+#If set to True only frames with neutrinos as primaries are selected
+onlyneutrinoasprimary = True
+# number of MC-paths given, need to match the number of files to be shuffled, needs to start with 0
 MC_path0 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11477/00000-00999/clsim-base-4.0.3.0.99_eff/
 MC_path1 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11981/00000-00999/clsim-base-4.0.3.0.99_eff/
 MC_path2 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11374/00000-00999/clsim-base-4.0.3.0.99_eff/
@@ -17,19 +20,8 @@ folder_list = allinmcpath
 ### use standart unix syntax for using files matching a special regular expression, e.g. *numu*
 file_list = allinfolder
 
+
 ### Define Input Variables Below
-[event_typ]
-variable = []
-out_type = float64
-
-[azimuth]
-variable = ['MCMostEnergeticTrack'].dir.azimuth
-out_type = float64
-
-[zenith]
-variable = ['MCMostEnergeticTrack'].dir.zenith
-out_type = float64
-
 [ow]
 variable = ['I3MCWeightDict']['OneWeight']
 out_type = float64
@@ -38,8 +30,15 @@ out_type = float64
 function = calc_depositedE(x)
 out_type = float64
 
-[energy]
-variable = ['MCMostEnergeticTrack'].energy
+[firstParticle]
+variable = ['I3MCTree'][0].pdg_encoding
 out_type = float64
-min = 100
-max = 1e9
+
+[classificationTag]
+function = classificationTag(x)
+out_type = float64
+
+[energyFirstParticle]
+variable = ['I3MCTree'][0].energy
+out_type = float64
+
