--- a/configs/create_dataset_multipleSim_mk.cfg
+++ b/configs/create_dataset_multipleSim_mk.cfg
@@ -5,10 +5,14 @@ onlyneutrinoasprimary = True
 MC_path0 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11477/
 MC_path1 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11981/
 MC_path2 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11374/
+#MC_path1 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11477/
+#MC_path2 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11477/
 geometry_file = /data/sim/sim-new/downloads/GCD/GeoCalibDetectorStatus_2012.56063_V0.i3.gz
-out_folder = /data/user/mkronmueller/data/run01
+out_folder = /data/user/mkronmueller/data/run03_all
+#out_folder = /data/user/mkronmueller/data/run02_onlymuon
 #data_folder = data/user/mkronmueller/data/run033/data
-dagman_folder = /data/user/mkronmueller/data/run01/dagman
+dagman_folder = /data/user/mkronmueller/data/run03_all/dagman
+#dagman_folder = /data/user/mkronmueller/data/run02_onlymuon/dagman
 input_shape = auto
 PulseSeriesMap = InIceDSTPulses
 ## give a comma seperated list of foldes in MC_path to be processed, if 'allinmcpath' use all folders
@@ -16,7 +20,7 @@ folder_list = allinmcpath
 ## give a comma seperated list of files to search for in subfolders of MC_path. If 'allinfolder' use all files.
 ### use standart unix syntax for using files matching a special regular expression, e.g. *numu*
 file_list = allinfolder
-# pickle is
+# pickle it is
 filelist_typ = pickle 
 
 
