--- a/configs/main_mk.cfg
+++ b/configs/main_mk.cfg
@@ -10,10 +10,10 @@ workload_manager = slurm
 ### path to the cuda installation
 cuda_installation = /usr/local/cuda/lib64
 ##path to monte carlo datasets
-mc_path = /data/user/mkronmueller/data/run033/hdf
+mc_path = /data/user/mkronmueller/data/run01_all/filelists/dataset0/File_13.h5
 #/scratch9/tglauch/NN_Reco/training_data/
 #
-train_folder = /data/user/mkronmueller/....
+train_folder = /data/user/mkronmueller/NN_out/run01
 
 [Training_Parameters]
 epochs = 60
