--- a/configs/main_mk.cfg
+++ b/configs/main_mk.cfg
@@ -2,7 +2,7 @@
 
 [Basics]
 ###folder of the python files
-thisfolder = /data/user/mkronmueller/code/DeepIceLearning
+thisfolder = /scratch9/mkron/software/DeepIceLearning/
 ###choose tensorflow or theano
 keras_backend = tensorflow       
 ### choose between slurm and condor
@@ -10,13 +10,13 @@ workload_manager = slurm
 ### path to the cuda installation
 cuda_installation = /usr/local/cuda/lib64
 ##path to monte carlo datasets
-mc_path = /data/user/mkronmueller/data/run01_all/filelists/dataset0/File_13.h5
+mc_path = /scratch9/mkron/data/
 #/scratch9/tglauch/NN_Reco/training_data/
 #
 train_folder = /data/user/mkronmueller/NN_out/run01
 
 [Training_Parameters]
-epochs = 60
+epochs = 1 
 ### the total batch size is the single_gpu_batch_size*reques_gpus
 single_gpu_batch_size = 200
 #### relative fractions of the training, validation, test dataset
@@ -34,4 +34,4 @@ loss_function=mean_squared_error
 request_gpus = 4
 request_memory = 7
 requirements = TARGET.CUDACapability 
-exclude_node = bigbird
+#exclude_node = bigbird
