--- a/configs/main_mk.cfg
+++ b/configs/main_mk.cfg
@@ -2,27 +2,27 @@
 
 [Basics]
 ###folder of the python files
-thisfolder = /scratch9/mkron/software/DeepIceLearning
+thisfolder = /scratch9/mkron/software/DeepIceLearning/
 ###choose tensorflow or theano
 keras_backend = tensorflow       
 ### choose between slurm and condor
 workload_manager = slurm
 ### path to the cuda installation
-cuda_installation = /usr/local/cuda/lib64
+cuda_installation = /usr/local/cuda/lib64/
 ##path to monte carlo datasets
-mc_path = /scratch9/mkron/data/training_data/subset
+mc_path = /scratch9/mkron/data/training_data/subset/
 #
 train_folder = /scratch9/mkron/data/NN_out/
 #name of the model.py
-model_name = class_allInput_plusFilters.py 
-# foilder to save ALL the outputs
-save_path= /scratch9/mkron/data/NN_out/run17/
+model_name = class_denseRes_2branch.py
+# folder to save ALL the outputs
+save_path= /scratch9/mkron/data/NN_out/run46/
 
 
 [Training_Parameters]
-epochs = 15 
+epochs = 50
 ### the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 200
+single_gpu_batch_size = 50
 #### relative fractions of the training, validation, test dataset
 training_fraction = 7.5     
 validation_fraction = 2.5
@@ -41,4 +41,4 @@ loss_function=categorical_crossentropy
 request_gpus = 4
 request_memory = 7
 requirements = TARGET.CUDACapability 
-exclude_node = piggy
+exclude_node = bigbird
