--- a/configs/main_mk.cfg
+++ b/configs/main_mk.cfg
@@ -14,28 +14,31 @@ mc_path = /scratch9/mkron/data/training_data/subset/
 #
 train_folder = /scratch9/mkron/data/NN_out/
 #name of the model.py
-model_name = class_denseRes_2branch.py
+model_name = class_base50.py
 # folder to save ALL the outputs
-save_path= /scratch9/mkron/data/NN_out/run46/
+save_path= /scratch9/mkron/data/NN_out/run52/
 
 
 [Training_Parameters]
 epochs = 50
 ### the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 50
+single_gpu_batch_size = 75
 #### relative fractions of the training, validation, test dataset
-training_fraction = 7.5     
-validation_fraction = 2.5
-test_fraction = 1
+training_fraction = 30  
+validation_fraction = 1
+test_fraction = 2
 patience = 20
 verbose = 1
 delta = 0
 max_queue_size = 2
-learning_rate = 0.001
+learning_rate = 0.0004
 ##### loss function, no spaces
 loss_function=categorical_crossentropy 
 ### weights, only needed if weighted loss function, length must fit number of classes
 #weights = 1.45, 0.5, 1.05
+optimizer =Nadam
+
+
 
 [GPU]
 request_gpus = 4
