--- a/configs/main_mk.cfg
+++ b/configs/main_mk.cfg
@@ -16,7 +16,7 @@ train_folder = /scratch9/mkron/data/NN_out/
 #name of the model.py
 model_name = class_base50.py
 # folder to save ALL the outputs
-save_path= /scratch9/mkron/data/NN_out/run52/
+save_path= /scratch9/mkron/data/NN_out/run54/
 
 
 [Training_Parameters]
@@ -36,7 +36,7 @@ learning_rate = 0.0004
 loss_function=categorical_crossentropy 
 ### weights, only needed if weighted loss function, length must fit number of classes
 #weights = 1.45, 0.5, 1.05
-optimizer =Nadam
+optimizer =Adam
 
 
 
