--- a/configs/create_dataset_multipleSim_mk.cfg
+++ b/configs/create_dataset_multipleSim_mk.cfg
@@ -1,30 +1,34 @@
 [Basics]
 #If set to True only frames with neutrinos as primaries are selected
 onlyneutrinoasprimary = True
+
 # number of MC-paths given, need to match the number of files to be shuffled, needs to start with 0
-MC_path0 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11477/
-MC_path1 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11981/
-MC_path2 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11374/
-#MC_path1 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11477/
-#MC_path2 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11477/
+MC_path0 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11297/ #high tau
+MC_path1 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11981/ #low  e
+MC_path2 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11374/ #low  mu
+
 geometry_file = /data/sim/sim-new/downloads/GCD/GeoCalibDetectorStatus_2012.56063_V0.i3.gz
+
 out_folder = /data/user/mkronmueller/data/run01_all
-#out_folder = /data/user/mkronmueller/data/run02_onlymuon
-#data_folder = data/user/mkronmueller/data/run033/data
+
 dagman_folder = /data/user/mkronmueller/data/run01_all/dagman
-#dagman_folder = /data/user/mkronmueller/data/run02_onlymuon/dagman
+
 input_shape = auto
+
 PulseSeriesMap = InIceDSTPulses
+
 ## give a comma seperated list of foldes in MC_path to be processed, if 'allinmcpath' use all folders
 folder_list = allinmcpath  
+
 ## give a comma seperated list of files to search for in subfolders of MC_path. If 'allinfolder' use all files.
 ### use standart unix syntax for using files matching a special regular expression, e.g. *numu*
 file_list = allinfolder
+
 # pickle it is
 filelist_typ = pickle 
 
 
-### Define Input Variables Below
+### Define Input Variables Below, Reco Quantities
 [ow]
 variable = ['I3MCWeightDict']['OneWeight']
 out_type = float64
@@ -45,3 +49,6 @@ out_type = float64
 variable = ['I3MCTree'][0].energy
 out_type = float64
 
+[startingLabel]
+function = starting(x)
+out_type = float64
