update on creat dataset

--- a/configs/create_dataset_multipleSim_mk.cfg
+++ b/configs/create_dataset_multipleSim_mk.cfg
@@ -3,15 +3,15 @@
 onlyneutrinoasprimary = True
 
 # number of MC-paths given, need to match the number of files to be shuffled, needs to start with 0
-MC_path0 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11297/ #high tau
-MC_path1 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11981/ #low  e
-MC_path2 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11374/ #low  mu
+MC_path0 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11297/
+MC_path1 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11981/ 
+MC_path2 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11374/
 
 geometry_file = /data/sim/sim-new/downloads/GCD/GeoCalibDetectorStatus_2012.56063_V0.i3.gz
 
-out_folder = /data/user/mkronmueller/data/run01_all
+out_folder = /data/user/mkronmueller/data/second_set/run01
 
-dagman_folder = /data/user/mkronmueller/data/run01_all/dagman
+dagman_folder = /data/user/mkronmueller/data/second_set/run01/dagman
 
 input_shape = auto
 
@@ -27,12 +27,10 @@ file_list = allinfolder
 # pickle it is
 filelist_typ = pickle 
 
+# maximum energy of events [GeV]
+energy_cutoff = 100000000
 
 ### Define Input Variables Below, Reco Quantities
-[ow]
-variable = ['I3MCWeightDict']['OneWeight']
-out_type = float64
-
 [depositedE]
 function = calc_depositedE(x)
 out_type = float64
@@ -52,3 +50,7 @@ out_type = float64
 [startingLabel]
 function = starting(x)
 out_type = float64
+
+[upDownLabel]
+function = up_or_down(x)
+out_type = float64 
