--- a/configs/main_mk.cfg
+++ b/configs/main_mk.cfg
@@ -38,6 +38,14 @@ loss_function=categorical_crossentropy
 #weights = 1.45, 0.5, 1.05
 optimizer =Adam
 
+[Multi_Task_Learning]
+ON/OFF = ON
+loss = {'output_b1': 'categorical_crossentropy', 'output_b2': 'categorical_crossentropy', 'output_b3': 'categorical_crossentropy', 'output_b4': 'categorical_crossentropy'}
+loss_weights = {'output_b1': 1., 'output_b2': 1., 'output_b3': 1., 'output_b4': 1.}
+
+
+
+
 
 
 [GPU]
