--- a/configs/create_dataset_multipleSim_mk.cfg
+++ b/configs/create_dataset_multipleSim_mk.cfg
@@ -1,6 +1,6 @@
 [Basics]
 #If set to True only frames with neutrinos as primaries are selected
-onlyneutrinoasprimary = True
+onlyneutrinoasprimary = False
 
 # number of MC-paths given, need to match the number of files to be shuffled, needs to start with 0
 MC_path0 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11297/
@@ -39,18 +39,23 @@ out_type = float64
 variable = ['I3MCTree'][0].pdg_encoding
 out_type = float64
 
-[classificationTag]
-function = classificationTag(x)
-out_type = float64
-
 [energyFirstParticle]
 variable = ['I3MCTree'][0].energy
 out_type = float64
 
-[startingLabel]
+[ClassificationLabel]
+function = classificationTag(x)
+out_type = float64
+
+[StartingLabel]
 function = starting(x)
 out_type = float64
 
-[upDownLabel]
+[UpDownLabel]
 function = up_or_down(x)
-out_type = float64 
+out_type = float64
+
+[CoincidenceLabel]
+function = coincidenceLabel(x)
+out_type = float64  
+
