update of the day

--- a/configs/main_mk.cfg
+++ b/configs/main_mk.cfg
@@ -10,13 +10,13 @@ workload_manager = slurm
 ### path to the cuda installation
 cuda_installation = /usr/local/cuda/lib64/
 ##path to monte carlo datasets
-mc_path = /scratch9/mkron/data/training_data/subset/
+mc_path = /scratch9/mkron/data/training_data/second_dataset/
 #
 train_folder = /scratch9/mkron/data/NN_out/
 #name of the model.py
-model_name = class_base50.py
+model_name = multi_basic.py
 # folder to save ALL the outputs
-save_path= /scratch9/mkron/data/NN_out/run54/
+save_path= /scratch9/mkron/data/NN_out/run61/
 
 
 [Training_Parameters]
@@ -38,14 +38,11 @@ loss_function=categorical_crossentropy
 #weights = 1.45, 0.5, 1.05
 optimizer =Adam
 
+
 [Multi_Task_Learning]
 ON/OFF = ON
 loss = {'output_b1': 'categorical_crossentropy', 'output_b2': 'categorical_crossentropy', 'output_b3': 'categorical_crossentropy', 'output_b4': 'categorical_crossentropy'}
 loss_weights = {'output_b1': 1., 'output_b2': 1., 'output_b3': 1., 'output_b4': 1.}
-
-
-
-
 
 
 [GPU]
