--- a/configs/create_dataset_multipleSim_mk.cfg
+++ b/configs/create_dataset_multipleSim_mk.cfg
@@ -35,12 +35,28 @@ energy_cutoff = 100000000
 function = calc_depositedE(x)
 out_type = float64
 
+[hitDOMs]
+function = calc_hitDOMs(x)
+out_type = float64
+
 [firstParticle]
 variable = ['I3MCTree'][0].pdg_encoding
 out_type = float64
 
 [energyFirstParticle]
 variable = ['I3MCTree'][0].energy
+out_type = float64
+
+[zenith]
+variable = ["LineFit"].dir.zenith
+out_type = float64
+
+[RunID]
+variable = ['I3EventHeader'].run_id
+out_type = float64
+
+[EventID]
+variable = ['I3EventHeader'].event_id
 out_type = float64
 
 [ClassificationLabel]
