--- a/configs/main_SingleLabel_mk.cfg
+++ b/configs/main_SingleLabel_mk.cfg
@@ -14,18 +14,18 @@ mc_path = /scratch9/mkron/data/training_data/second_dataset/
 #
 train_folder = /scratch9/mkron/data/NN_out/
 #name of the model.py
-model_name = multi_basic.py
+model_name = class_50_newLabel.py
 # folder to save ALL the outputs
-save_path= /scratch9/mkron/data/NN_out/run71/
+save_path= /scratch9/mkron/data/NN_out/run67/
 
 
 [Training_Parameters]
-epochs = 70
+epochs = 50
 ### the total batch size is the single_gpu_batch_size*reques_gpus
 single_gpu_batch_size = 75
 #### relative fractions of the training, validation, test dataset
 training_fraction = 30  
-validation_fraction = 2
+validation_fraction = 1
 test_fraction = 2
 patience = 20
 verbose = 1
@@ -40,12 +40,9 @@ optimizer =Adam
 
 
 [Multi_Task_Learning]
-ON/OFF = ON
+ON/OFF = OFF
 loss = {'output_b1': 'categorical_crossentropy', 'output_b2': 'categorical_crossentropy', 'output_b3': 'categorical_crossentropy', 'output_b4': 'categorical_crossentropy'}
-loss_weights = {'output_b1': 10., 'output_b2': 1., 'output_b3': 1., 'output_b4': 1.}
-# CustomLoss to ON and output_b1 has an individual loss function, which weights each event due to energy and event type
-CustomLoss = OFF
-weights = 2.0, 1.0, 10.0
+loss_weights = {'output_b1': 1., 'output_b2': 1., 'output_b3': 1., 'output_b4': 1.}
 
 
 [GPU]
