--- a/configs/create_dataset_multipleSim_mk.cfg
+++ b/configs/create_dataset_multipleSim_mk.cfg
@@ -3,7 +3,7 @@
 onlyneutrinoasprimary = False
 
 # number of MC-paths given, need to match the number of files to be shuffled, needs to start with 0
-MC_path0 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11297/
+MC_path0 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11477/
 MC_path1 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11981/ 
 MC_path2 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11374/
 
@@ -29,6 +29,10 @@ filelist_typ = pickle
 
 # maximum energy of events [GeV]
 energy_cutoff = 100000000
+
+# minimal energy requierment for taus [GeV]
+minimal_tau_energy = 200000
+
 
 ### Define Input Variables Below, Reco Quantities
 [depositedE]
@@ -57,6 +61,10 @@ out_type = float64
 
 [EventID]
 variable = ['I3EventHeader'].event_id
+out_type = float64
+
+[TauDecayLength]
+function = tau_decay_length(x)
 out_type = float64
 
 [ClassificationLabel]
