--- a/configs/main_mk.cfg
+++ b/configs/main_mk.cfg
@@ -16,7 +16,7 @@ train_folder = /scratch9/mkron/data/NN_out/
 #name of the model.py
 model_name = multi_basic.py
 # folder to save ALL the outputs
-save_path= /scratch9/mkron/data/NN_out/run72/
+save_path= /scratch9/mkron/data/NN_out/run73/
 
 
 [Training_Parameters]
@@ -42,9 +42,9 @@ optimizer =Adam
 [Multi_Task_Learning]
 ON/OFF = ON
 loss = {'output_b1': 'categorical_crossentropy', 'output_b2': 'categorical_crossentropy', 'output_b3': 'categorical_crossentropy', 'output_b4': 'categorical_crossentropy'}
-loss_weights = {'output_b1': 10., 'output_b2': 1., 'output_b3': 1., 'output_b4': 1.}
+loss_weights = {'output_b1': 30., 'output_b2': 1., 'output_b3': 1., 'output_b4': 1.}
 # CustomLoss to ON and output_b1 has an individual loss function, which weights each event due to energy and event type
-CustomLoss = ON
+CustomLoss = OFF
 weights = 1.0, 1.0, 1.0
 
 
