new classify version 1

--- a/configs/create_dataset_multipleSim_mk.cfg
+++ b/configs/create_dataset_multipleSim_mk.cfg
@@ -1,17 +1,20 @@
 [Basics]
-#If set to True only frames with neutrinos as primaries are selected
-onlyneutrinoasprimary = False
-
 # number of MC-paths given, need to match the number of files to be shuffled, needs to start with 0
-MC_path0 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11477/
-MC_path1 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11981/ 
-MC_path2 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11374/
+# old MC
+#MC_path0 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11477/
+#MC_path1 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11981/ 
+#MC_path2 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11374/
+# new MC from nancy
+# low energy von 100 GeV-5 TeV, medium von 5 TeV-100 PeV
+MC_path0 = /data/ana/Cscd/StartingEvents/NuGen/NuE/medium_energy/IC86_2013/l2
+MC_path1 = /data/ana/Cscd/StartingEvents/NuGen/NuMu/medium_energy/IC86_2013/l2
+MC_path2 = /data/ana/Cscd/StartingEvents/NuGen/NuTau/medium_energy/IC86_2013/l2
 
 geometry_file = /data/sim/sim-new/downloads/GCD/GeoCalibDetectorStatus_2012.56063_V0.i3.gz
 
-out_folder = /data/user/mkronmueller/data/second_set/run01
+out_folder = /data/user/mkronmueller/data/third_set/run01
 
-dagman_folder = /data/user/mkronmueller/data/second_set/run01/dagman
+dagman_folder = /data/user/mkronmueller/data/third_set/run01/dagman
 
 input_shape = auto
 
@@ -27,11 +30,28 @@ file_list = allinfolder
 # pickle it is
 filelist_typ = pickle 
 
+
+
+[Cuts]
+#set a specific cut on ON to aplly it
+# only events with a neutrino as primary
+only_neutrino_as_primary_cut = OFF
+
 # maximum energy of events [GeV]
-energy_cutoff = 100000000
+max_energy_cut = OFF
+max_energy_cutoff = 100000000
+
+# minmal energy of events [GeV]
+min_energy_cut = OFF
+min_energy_cutoff = 100
 
 # minimal energy requierment for taus [GeV]
+minimal_tau_energy_cut = OFF
 minimal_tau_energy = 200000
+
+# minimal amount of hit DOMs
+min_hit_DOMs_cut = OFF
+min_hit_DOMs = 9
 
 
 ### Define Input Variables Below, Reco Quantities
@@ -83,3 +103,14 @@ out_type = float64
 function = coincidenceLabel(x)
 out_type = float64  
 
+[MinBias_Filter]
+variable = ["QFilterMask"]["FilterMinBias_12"]
+out_type = float64
+
+[Cascade_Filter]
+variable = ["QFilterMask"]["CascadeFilter_12"]
+out_type = float64
+
+[Muon_Filter]
+variable = ["QFilterMask"]["MuonFilter_12"]
+out_type = float64
