new classify test 2

--- a/configs/create_dataset_multipleSim_mk.cfg
+++ b/configs/create_dataset_multipleSim_mk.cfg
@@ -10,11 +10,15 @@ MC_path0 = /data/ana/Cscd/StartingEvents/NuGen/NuE/medium_energy/IC86_2013/l2
 MC_path1 = /data/ana/Cscd/StartingEvents/NuGen/NuMu/medium_energy/IC86_2013/l2
 MC_path2 = /data/ana/Cscd/StartingEvents/NuGen/NuTau/medium_energy/IC86_2013/l2
 
+thisfolder = /data/user/mkronmueller/code/DeepIceLearning
+
 geometry_file = /data/sim/sim-new/downloads/GCD/GeoCalibDetectorStatus_2012.56063_V0.i3.gz
 
 out_folder = /data/user/mkronmueller/data/third_set/run01
 
 dagman_folder = /data/user/mkronmueller/data/third_set/run01/dagman
+
+fail_file = /data/user/mkronmueller/data/third_set/run01/fail_file
 
 input_shape = auto
 
