--- a/configs/create_dataset_multipleSim_mk.cfg
+++ b/configs/create_dataset_multipleSim_mk.cfg
@@ -108,13 +108,13 @@ function = coincidenceLabel(x)
 out_type = float64  
 
 [MinBias_Filter]
-variable = ["QFilterMask"]["FilterMinBias_12"]
+variable = ["FilterMask"]["FilterMinBias_13"]
 out_type = float64
 
 [Cascade_Filter]
-variable = ["QFilterMask"]["CascadeFilter_12"]
+variable = ["FilterMask"]["CascadeFilter_13"]
 out_type = float64
 
 [Muon_Filter]
-variable = ["QFilterMask"]["MuonFilter_12"]
+variable = ["FilterMask"]["MuonFilter_13"]
 out_type = float64
