--- a/configs/create_dataset_multipleSim_mk.cfg
+++ b/configs/create_dataset_multipleSim_mk.cfg
@@ -92,7 +92,7 @@ function = tau_decay_length(x)
 out_type = float64
 
 [ClassificationLabel]
-function = classificationTag(x)
+function = classify(x)
 out_type = float64
 
 [StartingLabel]
@@ -105,7 +105,7 @@ out_type = float64
 
 [CoincidenceLabel]
 function = coincidenceLabel(x)
-out_type = float64  
+out_type = float64
 
 [MinBias_Filter]
 variable = ["FilterMask"]["FilterMinBias_13"]
