--- a/configs/create_dataset_multipleSim_mk.cfg
+++ b/configs/create_dataset_multipleSim_mk.cfg
@@ -108,13 +108,13 @@ function = coincidenceLabel(x)
 out_type = float64
 
 [MinBias_Filter]
-variable = ["FilterMask"]["FilterMinBias_13"]
+variable = ["FilterMask"]["FilterMinBias_13"].condition_passed
 out_type = float64
 
 [Cascade_Filter]
-variable = ["FilterMask"]["CascadeFilter_13"]
+variable = ["FilterMask"]["CascadeFilter_13"].condition_passed
 out_type = float64
 
 [Muon_Filter]
-variable = ["FilterMask"]["MuonFilter_13"]
+variable = ["FilterMask"]["MuonFilter_13"].condition_passed
 out_type = float64
