--- a/configs/create_dataset_multipleSim_mk.cfg
+++ b/configs/create_dataset_multipleSim_mk.cfg
@@ -6,19 +6,19 @@
 #MC_path2 = /data/sim/IceCube/2012/filtered/level2/neutrino-generator/11374/
 # new MC from nancy
 # low energy von 100 GeV-5 TeV, medium von 5 TeV-100 PeV
-MC_path0 = /data/ana/Cscd/StartingEvents/NuGen/NuE/medium_energy/IC86_2013/l2
-MC_path1 = /data/ana/Cscd/StartingEvents/NuGen/NuMu/medium_energy/IC86_2013/l2
-MC_path2 = /data/ana/Cscd/StartingEvents/NuGen/NuTau/medium_energy/IC86_2013/l2
+MC_path0 = /data/ana/Cscd/StartingEvents/NuGen/NuE/medium_energy/IC86_2013/l2/
+MC_path1 = /data/ana/Cscd/StartingEvents/NuGen/NuMu/medium_energy/IC86_2013/l2/
+MC_path2 = /data/ana/Cscd/StartingEvents/NuGen/NuTau/medium_energy/IC86_2013/l2/
 
-thisfolder = /data/user/tglauch/DeepIceLearning
+thisfolder = /data/user/mkronmueller/code/DeepIceLearning
 
-geometry_file = /data/sim/sim-new/downloads/GCD/GeoCalibDetectorStatus_2012.56063_V0.i3.gz
+geometry_file = /cvmfs/icecube.opensciencegrid.org/data/GCD/GeoCalibDetectorStatus_2013.56429_V0.i3.gz
 
-out_folder = /data/user/tglauch/DLdata/
+out_folder = /data/user/mkronmueller/data/third_set/run01
 
-dagman_folder = /data/user/tglauch/DLdata/dagman
+dagman_folder = /data/user/mkronmueller/data/third_set/run01/dagman
 
-fail_file = /data/user/tglauch/DLdata/fail_file
+logger_path = /data/user/mkronmueller/data/third_set/run01
 
 input_shape = auto
 
@@ -105,7 +105,7 @@ out_type = float64
 
 [CoincidenceLabel]
 function = coincidenceLabel(x)
-out_type = float64
+out_type = float64  
 
 [MinBias_Filter]
 variable = ["FilterMask"]["FilterMinBias_13"].condition_passed
