--- a/configs/main_mk.cfg
+++ b/configs/main_mk.cfg
@@ -10,19 +10,21 @@ workload_manager = slurm
 ### path to the cuda installation
 cuda_installation = /usr/local/cuda/lib64/
 ##path to monte carlo datasets
-mc_path = /scratch9/mkron/data/training_data/second_dataset/
+mc_path = /scratch9/mkron/data/training_data/third_dataset/small/
 #
 train_folder = /scratch9/mkron/data/NN_out/
 #name of the model.py
-model_name = multi_basic.py
+model_name = new_multi.py
 # folder to save ALL the outputs
-save_path= /scratch9/mkron/data/NN_out/run73/
+save_path= /scratch9/mkron/data/NN_out/run16/
 
 
 [Training_Parameters]
-epochs = 70
+epochs = 700
 ### the total batch size is the single_gpu_batch_size*reques_gpus
-single_gpu_batch_size = 75
+single_gpu_batch_size = 50
+# the steps_per_epoch is divided by this number
+epoch_divider = 100
 #### relative fractions of the training, validation, test dataset
 training_fraction = 30  
 validation_fraction = 2
@@ -41,11 +43,13 @@ optimizer =Adam
 
 [Multi_Task_Learning]
 ON/OFF = ON
-loss = {'output_b1': 'categorical_crossentropy', 'output_b2': 'categorical_crossentropy', 'output_b3': 'categorical_crossentropy', 'output_b4': 'categorical_crossentropy'}
-loss_weights = {'output_b1': 30., 'output_b2': 1., 'output_b3': 1., 'output_b4': 1.}
+#loss = {'output_b1': 'categorical_crossentropy', 'output_b2': 'categorical_crossentropy', 'output_b3': 'categorical_crossentropy', 'output_b4': 'mean_squared_error'}
+#loss_weights = {'output_b1': 30., 'output_b2': 1., 'output_b3': 1., 'output_b4': 1.}
+loss = {'output_b1': 'categorical_crossentropy', 'output_b2': 'categorical_crossentropy', 'output_b3': 'categorical_crossentropy'}
+loss_weights = {'output_b1': 30., 'output_b2': 1., 'output_b3': 1.}
 # CustomLoss to ON and output_b1 has an individual loss function, which weights each event due to energy and event type
-CustomLoss = OFF
-weights = 1.0, 1.0, 1.0
+CustomLoss = ON
+weights = 1.0, 1.789, 81.732, 10.0
 
 
 [GPU]
