correct follow-up bugs from previous commit

--- a/configs/default_new.cfg
+++ b/configs/default_new.cfg
@@ -10,15 +10,15 @@ MC_path0 = /data/ana/Cscd/StartingEvents/NuGen/NuE/medium_energy/IC86_2013/l2/
 MC_path1 = /data/ana/Cscd/StartingEvents/NuGen/NuMu/medium_energy/IC86_2013/l2/
 MC_path2 = /data/ana/Cscd/StartingEvents/NuGen/NuTau/medium_energy/IC86_2013/l2/
 
-thisfolder = /data/user/mkronmueller/code/DeepIceLearning
+thisfolder = /data/user/tglauch/DeepIceLearning
 
 geometry_file = /cvmfs/icecube.opensciencegrid.org/data/GCD/GeoCalibDetectorStatus_2013.56429_V0.i3.gz
 
-out_folder = /data/user/mkronmueller/data/third_set/run01
+out_folder = /data/user/tglauch/DL_output/data/third_set/run01
 
-dagman_folder = /data/user/mkronmueller/data/third_set/run01/dagman
+dagman_folder = /data/user/tglauch/DL_output/data/third_set/run01/dagman
 
-logger_path = /data/user/mkronmueller/data/third_set/run01
+logger_path = /data/user/tglauch/DL_output/data/third_set/run01
 
 input_shape = auto
 
@@ -32,7 +32,7 @@ folder_list = allinmcpath
 file_list = allinfolder
 
 # pickle it is
-filelist_typ = pickle 
+filelist_typ = pickle # pickle 
 
 [Input_Charges]
 charge = np.sum(c)
