new create dataset v.0.9

--- a/configs/default_new.cfg
+++ b/configs/default_new.cfg
@@ -32,16 +32,16 @@ folder_list = allinmcpath
 file_list = allinfolder
 
 [Input_Charges]
-charge = np.sum(c)
-first_charge = c[0]
-num_pulses = len(c)
+charge = np.sum(charges)
+first_charge = charges[0]
+num_pulses = len(charges)
 
 
 [Input_Times]
-time_first = np.amin(t) 
-time_spread = np.amax(t)-np.amin(t)
-av_time_charges =average(c, 1./w)
-time_kurtosis = skew(t)
+time_first = np.amin(times) 
+time_spread = np.amax(times)-np.amin(times)
+av_time_charges =average(charges, 1./widths)
+time_kurtosis = skew(times)
 time_moment_2 = moment(times, moment=2)
 
 [Input_Waveforms1]
